# LangChain-Transformer-ChatModel

./: ChunkParser.ipynb  README.md  demo.ipynb  pyproject.toml  requirements.txt  test.ipynb
notebook/: ChunkParser.ipynb  test.ipynb
transformer_chat_model/: __init__.py
transformer_chat_model/chat_models/: __init__.py  classic_transfomer.py  classic_transformer.py  gptoss.py  transformer_chat_model.py
transformer_chat_model/prompts/: base_system.jinja2
transformer_chat_model/utils/: __init__.py  message.py  stream.py  tool_call.py
